# wallpaper-overrider-rs

./: Cargo.toml  LICENSE  README.md  app.manifest  build.rs
.github/: dependabot.yml
.github/workflows/: release.yml  rust.yml
src/: app.rs  elevation.rs  i18n.rs  main.rs  registry.rs  wallpaper_style.rs
