[package]
name = "wallpaper-overrider-rs"
version = "0.1.0"
edition = "2021"
description = "Override Windows wallpaper settings via registry policies"
authors = ["Vincent Gravade"]
license = "GPL-3.0"

[[bin]]
name = "wallpaper-overrider"
path = "src/main.rs"

[dependencies]
eframe = "0.31"
egui = "0.31"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "bmp"] }
winreg = "0.56"
rfd = "0.15"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
sys-locale = "0.3"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_System_Memory",
    "Win32_System_Registry",
    "Win32_System_Threading",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1
panic = "abort"
